--- a/capstoneProject/src/main/resources/messages.properties
+++ b/capstoneProject/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
+xENGLISH=some value
+
 
 registrationTitle=Join Us
 topLineRegistration=Welcome to Vernacular Traffic!
@@ -5,7 +7,7 @@ explanation=A Place for You to Practice Phonetic Transcription with Your Peers
 makeUser=Make Yourself a User!
 alreadyRegistered=But Are You Already A User?
 language=fr
-languagePreference=Click here to change your preferred language to French
+languagePreference=Click here to change your current language to French
 usernameRegistration=Choose a Username
 placeholderUsernameRegistration=between five and fifteen characters in length
 passwordOneRegistration=And a Password, Please
@@ -34,8 +36,248 @@ logoutTimelineTwoYes=Yes
 logoutTimelineTwoNo=No
 postDateTimeline=posted on
 postTimeTimeline=at
+postCommentAuthor=post comment made by
+postCommentDate=on
+postCommentTime=at
+postCommentAuthorLoggedInUser=you
+deletePostComment=DELETE this post comment
 necessaryPrepositionTimelinePost=by
 transcriptionOfferTimeline=Click here to transcribe this post,
 editPostOfferTimeline=Click here to edit your post, 
 postAuthorLoggedInUser=you
-deletePostOfferTimeline=Click here to delete your post, 
+deletePostOfferTimeline=DELETE your post, 
+commentPostOfferTimeline=Comment on this post
+transcriptionAuthorTimeline=transcription made by
+transcriptionDateTimeline=on
+transcriptionTimeTimeline=at
+editTranscription=Click here to edit your transcription
+deleteTranscription=DELETE this transcription
+transcriptionAuthor=you
+transcriptionCommentMadeBy=transcription comment made by
+transcriptionCommentAuthor=you
+transcriptionCommentTime=at
+transcriptionCommentDate=on
+deleteTranscriptionComment=DELETE this transcription comment
+transcriptionCommentOffer=Comment on this transcription
+
+
+yourProfile=Your Profile
+yourProfile2=This is Your Profile
+whoseProfile=This is the Profile For
+userHowLong=Registered User Since
+logOutOption=or log out
+logOutSure=Are you sure that you want this option and no other?
+profileLogoutNo=No
+profileLogoutYes=Yes
+languageChangeProfile=Change the language to French
+toTimelineFromProfile=To the Timeline
+firstNameProfile=First Name
+lastNameProfile=Last Name
+ageProfile=Age
+languageProfile=Language
+languagesProfile=Languages
+emailProfile=Email Address
+editProfile=Edit Your Profile
+changeUsername=Change Your Username
+onePost=Your Post
+moreThanOnePost=Your Posts
+noPostsUser=You haven't yet made any posts
+makePostOffer=Click here to make a post
+postSingular=The Post from
+postPlural=The Posts from
+noPostsOther=hasn't yet made any posts
+profilePostDate=posted on
+profilePostTime=at
+profilePreposition=by
+loggedInUserProfile=you
+commentaryFromOtherUserProfile=Commentary from another user on
+commentaryFromOtherUsersProfile=Commentary from another user or users on
+postCommentProfile=post comment made by
+postCommentDateProfile=posted on
+postCommentTimeProfile=at
+editPostProfile=Edit your post
+deletePostProfile=DELETE Your Post
+makePostOfferProfile=Make a post
+postCommentUserProfile=Your Post Comment
+postCommentsUserProfile=Your Post Comments
+noPostCommentUser=You haven't yet commented on any post
+makePostCommentOfferProfile=Go to the timeline to find a comment-worthy post
+postCommentProfileHeader=The Post Comment from
+postCommentsProfileHeader=The Post Comments from
+noPostCommentsProfileOtherUser=hasn't yet commented on any post
+parentofPostComment=comment made on post
+deletePostCommentProfile=DELETE this post comment
+userTranscriptionProfile=Your Transcription
+userTranscriptionsProfile=Your Transcriptions
+noTranscriptionUserProfile=You haven't yet transcribed any post
+transcriptionOfferProfile=Go to the timeline to find a transcription-worthy post
+transcriptionOtherUserProfile=The Transcription from
+transcriptionsOtherUserProfile=The Transcriptions from
+noTranscriptionOtherUserProfile=hasn't yet transcribed any post
+oneTranscriptionCommentloggedInUserProfile=Your Transcription Comment
+oneTranscriptionCommentsloggedInUserProfile=Your Transcription Comments
+noTranscriptionCommentUserProfile=You haven't yet commented on any transcription
+transcriptionCommentOfferProfile=Go to the timeline to find a comment-worthy transcription
+transcriptionCommentOtherUserProfile=The Transcription Comment from
+transcriptionCommentsOtherUserProfile=The Transcription Comments from
+noTranscriptionCommentOtherUserProfile=hasn't yet commented on any transcription
+parentOfTranscriptionComment=comment made on transcription
+
+
+postTitle=Make a post
+postFirstHeader=Go On and Make Your Post
+postName=Name of Post
+postNamePlaceholder=Please give the post a decent name, between four and twenty-five characters
+postContent=The Post Itself
+postContentPlaceholder=At least ten characters but no more than one-hundred and fifty
+submitButtonPost=Post It
+postLanguage=Click here to change your post language to French
+toTimelineFromPost=Or Go Back to the Timeline
+
+
+editPostTitle=Edit Your Post 
+editPostFirstHeader=Go On and EDIT Your Post That's Called
+editPostNamePlaceholder=Again, a decent name, and between four and twenty-five characters
+editPostContentPlaceholder=Again, at least ten characters but under one-hundred and fifty
+submitButtonEditPost=Edit It
+
+
+titleCreateProfile=Profile for New User
+welcomeCreateProfile=Welcome to Vernacular Traffic
+messageToFinishCreatingProfile=Now is the Time to Fill Out Your Profile
+languageChoiceProfileCreation=Choose One Language or Both
+firstNameCreateProfile=Your First Name
+lastNameCreateProfile=Your Last Name
+ageCreateProfile=Your Age
+languagesCreateProfile=Please first press the control key if you wish to choose more than one language
+emailAddressCreateProfile=Your Email Address
+submitButtonCreateProfile=Onward
+ENGLISH=English
+FRENCH=French
+
+
+editProfileTitle=Edit Your Profile
+firstNameEditProfile=First Name
+lastNameEditProfile=Last Name
+ageEditProfile=Age
+languageEditProfile=Language
+languagesEditProfile=Languages
+emailAddressEditProfile=Email Address
+saveChangesEditProfile=Save Your Changes
+modalTitleEditProfile=Profile Changes
+modalBodyEditProfile=Are you sure that you want to make these changes to your profile?
+closeModalEditProfile=Close
+openModalEditProfile=Save the Changes
+
+
+editUsernameTitle=Edit Your Username
+editUsernameWelcome=It's High Time You Change Your Username
+editUsernameContinue=Do So Here
+editUsernameChangeUsername=Change Your Username
+usernameChange=Username Change
+changeUsernameQuestion=Are you sure that you want to change your username?
+openModalEditUsername=Change My Username
+
+
+postCommentTitle=Make a Post Comment
+postCommentIntro=Make a comment on the post that's called
+oneCommentPostComment=The comment so far on
+plusOneCommentPostComment=The comments so far on
+postCommentPlaceholder=Here is where the post comment goes
+postCommentButton=Comment in the post-like way
+postCommentMadeBy=post comment made by
+
+
+transcriptionCommentTitle=Make a Transcription Comment
+transcriptionCommentHeader=Make a Comment on the Transcription that's Called
+oneCommentTranscriptionComment=The comment so far on
+plusOneCommentTranscriptionComment=The comments so far on
+transcriptionCommentPage=transcription comment made by
+transcriptionCommentTranscriptionPost=the transcription's post, as you see above, is called
+transcriptionCommentPlaceholder=Here is where the transcription comment goes
+transcriptionCommentButton=Comment in the transcription-like way
+transcriptionCommentAdditional=and it's by
+
+
+languagePreferenceTitle=Language Preference
+moreThanMonolingual=Way to be more than monolingual
+nextHeaderLanguagePreference=Now you need to choose your language preference
+langPrefButton=Solidify your preference
+
+
+
+
+
+
+
+
+unauthorizedTitle=Unauthorized
+unauthorizedMessage=The language code that you've chosen is unsupported
+unauthorizedButton=Click here
+
+
+unavailableTitle=Unavailable
+unavailableMessage=The page that you've chosen is unavailable
+
+
+transcriptionTitle=Transcribe a Post
+transcriptionHeader=Transcribe the Post that's Called
+tablesTranscription=Use the Tables of Buttons Below
+again=Again
+symbolHeader=Supplemental Symbols
+stress1=Primary Stress
+stress2=Secondary Stress
+aspirated=Aspirated
+tilde=Tilde
+consonants=Consonants
+bilabial=Bilabial
+labiodental=Labiodental
+dental=Dental
+alveolar=Alveolar
+postalveolar=Postalveolar
+retroflex=Retroflex
+palatal=Palatal
+velar=Velar
+uvular=Uvular
+pharyngeal=Pharyngeal
+glottal=Glottal
+stop=Stop
+none=none |
+nasal=Nasal
+trill=Trill
+flap=Flap
+fricative=Fricative
+lateralFricative=Lateral Fricative
+approximant=Approximant
+lateralApproximant=Lateral Approximant
+info1=-- The button to the left in a given cell designates a voiceless sound; the one to the right aligns with a voiced sound
+info2=-- A fully gray cell indicates that there is no symbol, neither voiced nor voiceless, for the given place and manner of articulation; a fully black one indicates that the place and manner of articulation in question are impossible to make together
+info3=-- "none" equates to the color gray; "n.p." does the same to the color black
+vowels=Vowels
+frontFirstHalf=Fr
+frontSecondHalf=ont
+centralFirstHalf=Cent
+centralSecondHalf=ral
+backFirstHalf=Ba
+backSecondHalf=ck
+close=Close
+nearClose=Near-close
+closeMid=Close-mid
+mid=Mid
+openMid=Open-mid
+nearOpen=Near-open
+open=Open
+nasalVowels=NasalVowels
+lowerCase=lowercase
+upperCase=uppercase
+transcriptionButton=Transcribe Away
+editTranscriptionButton=Edit the Transcription
+
+
+
+
+
+editTranscriptionTitle=Edit Your Transcription
+editTranscriptionHeader=Edit Your Transcription of the Post that's Called
+
+
