--- a/capstoneProject/src/main/resources/messages_fr.properties
+++ b/capstoneProject/src/main/resources/messages_fr.properties
@@ -5,7 +5,7 @@ explanation=Un Site Pour Vous Pour Pratiquer La Transcription Phon\u00E9tique av
 makeUser=S'inscrire sur le site!
 alreadyRegistered=Mais \u00CAtes-Vous D\u00E9j\u00E0 Inscrit(e)?
 language=en
-languagePreference=Cliquez ici pour changer votre langue de pr\u00E9f\u00E9rence \u00E0 anglais
+languagePreference=Cliquez ici pour changer votre langue actuelle \u00E0 anglais
 usernameRegistration=Choisissez Votre Nom d'Utilisateur
 placeholderUsernameRegistration=entre cinq et quinze chiffres
 passwordOneRegistration=Et un Mot de Passe, S'il Vous Pla\u00EEt
@@ -13,6 +13,7 @@ placeholderPasswordOneRegistration=aussi entre cinq et quinze
 passwordTwoRegistration=R\u00E9p\u00E9tez le Mot de Passe
 placeholderPasswordTwoRegistration=le m\u00EAme que ci-dessus, bien s\u00FBr
 registrationButton=Proc\u00E9dez
+
 
 loginTitle=Se Connecter
 topLineLogin=Se Connecter Pour Vernacular Traffic
@@ -22,6 +23,8 @@ loginEmailJoke=Nous ne partagerons jamais votre addresse e-mail avec n'importe q
 placeholderUsernameLogin=Votre Nom d'Utilisateur
 placeholderUsernamePassword=Votre Mot de Passe
 loginButton=Connectez-Vous
+
+
 timeline=La Chronologie
 timelineWelcome=Bienvenue \u00E0 la Chronologie 
 profileLinkTimeline=Acc\u00E9dez \u00E0 Votre Profil
@@ -34,8 +37,239 @@ logoutTimelineTwoYes=Oui
 logoutTimelineTwoNo=Non
 postDateTimeline=soumis \u00E0
 postTimeTimeline=\u00E0
+postCommentAuthor=ce commentaire de post fait par
+postCommentDate=soumis \u00E0
+postCommentTime=\u00E0
+postCommentAuthorLoggedInUser=vous
+deletePostComment=SUPPRIMER ce commentaire de post
 necessaryPrepositionTimelinePost=par
 transcriptionOfferTimeline=Cliquez ici pour transcrire ce post,
 editPostOfferTimeline=Cliquez ici pour \u00E9diter votre post, 
 postAuthorLoggedInUser=vous
-deletePostOfferTimeline=Cliquez ici pour effacer votre post,
+deletePostOfferTimeline=SUPPRIMER votre post,
+commentPostOfferTimeline=Faites un commentaire pour ce post
+transcriptionAuthorTimeline=cette transcription fait par
+transcriptionDateTimeline=soumis \u00E0
+transcriptionTimeTimeline=\u00E0
+editTranscription=Cliquer ici pour \u00E9diter votre transcription
+deleteTranscription=SUPPRIMER cette transcription
+transcriptionAuthor=vous
+transcriptionCommentMadeBy=ce commentaire de transcription fait par
+transcriptionCommentAuthor=vous
+transcriptionCommentTime=\u00E0
+transcriptionCommentDate=soumis \u00E0
+deleteTranscriptionComment=SUPPRIMER ce commentaire de transcription
+transcriptionCommentOffer=Faites un commentaire sur cette transcription
+
+
+yourProfile=Votre Profil
+yourProfile2=Votre Profil
+whoseProfile=Le Profil de
+userHowLong=Utilisateur Enregistr\u00E9 Depuis
+logOutOption=ou d\u00E9connectez-vous
+logOutSure=\u00CAtes-Vous s\u00FBr que vous ne voulez que cette option?
+profileLogoutNo=Non
+profileLogoutYes=Oui
+languageChangeProfile=Changez La Langue \u00E0 Anglais
+toTimelineFromProfile=\u00C0 La Chronologie
+firstNameProfile=Pr\u00E9nom
+lastNameProfile=Nom de famille
+ageProfile=\u00C2ge
+languageProfile=Langue
+languagesProfile=Langues
+emailProfile=Adresse e-mail
+editProfile=\u00C9diter Votre Profil
+changeUsername=Changez Votre Nom d'Utilisateur
+onePost=Votre Poste
+moreThanOnePost=Vos Postes
+noPostsUser=Vous n'avez pas encore \u00E9crit de post
+makePostOffer=Cliquez ici pour faire un post 
+postSingular= Le Poste de
+postPlural=Les Postes de
+noPostsOther=n'a pas encore \u00E9crit de post
+profilePostDate=soumis \u00E0
+profilePostTime=\u00E0
+profilePreposition=par
+loggedInUserProfile=vous
+commentaryFromOtherUserProfile=Des Commentaires d'Un Autre Utilisateur pour
+commentaryFromOtherUsersProfile=Des Commentaires d'Un Autre Utilisateur ou des Autres Utilisateurs pour
+postCommentProfile=le commentaire de poste fait par
+postCommentDateProfile=soumis \u00E0 
+postCommentTimeProfile=\u00E0
+editPostProfile=\u00C9diter Votre Post
+deletePostProfile=SUPPRIMER Votre Post
+makePostOfferProfile=Faites un post
+postCommentUserProfile=Votre Commentaire de Post
+postCommentsUserProfile=Vos Commentaires de Post
+noPostCommentUser=Vous n'avez pas encore fait de commentaire de post
+makePostCommentOfferProfile=Visitez la chronologie pour trouver un post qui est digne de commentaire
+postCommentProfileHeader=Le Commentaire de Post de
+postCommentsProfileHeader=Les Commentaires de Post de
+noPostCommentsProfileOtherUser=n'a pas encore fait de commentaire de post
+parentofPostComment=le commentaire de post fait sur le post
+userTranscriptionProfile=Votre Transcription
+userTranscriptionsProfile=Vos Transcriptions
+noTranscriptionUserProfile=Vous n'avez pas fait de transcription de poste
+transcriptionOfferProfile=Visitez la chronologie pour trouver un poste qui est digne de transcription
+transcriptionOtherUserProfile=La Transcription de
+transcriptionsOtherUserProfile=Les Transcriptions de
+noTranscriptionOtherUserProfile=n'a pas encore fait de transcription de post
+oneTranscriptionCommentloggedInUserProfile=Votre Commentaire de Transcription
+oneTranscriptionCommentsloggedInUserProfile=Vos Commentaires de Transcription
+noTranscriptionCommentUserProfile=Vous n'avez pas encore fait de commentaire de transcription
+transcriptionCommentOfferProfile=Visitez la chronologie pour trouver une transcription qui est digne de commentaire
+transcriptionCommentOtherUserProfile=Le Commentaire de Transcription de
+transcriptionCommentsOtherUserProfile=Les Commentaires de Transcription de
+noTranscriptionCommentOtherUserProfile=n'a pas encore fait de commentaire de transcription
+parentOfTranscriptionComment=le commentaire de transcription fait sur la transcription qui s'appelle
+
+
+postTitle=Faites un post
+postFirstHeader=Continuez et Faites un Post
+postName=Le Nom du Post
+postNamePlaceholder=S'il Vous Pla\u00EEt, Donnez \u00E0 le Post un nom d\u00E9cent, qui est entre cinq et vingt-cinq chiffres
+postContent=Le Post Lui-M\u00EAme
+postContentPlaceholder=au moins de dix chiffres mais pas plus d'en cent cinquante
+submitButtonPost=Soumettez-Le
+postLanguage=Cliquez ici pour changer votre langue de publication \u00E0 fran\u00E7ais
+toTimelineFromPost=Ou Retournez \u00E0 La Chronologie
+
+
+editPostTitle=\u00C9ditez Votre Post
+editPostFirstHeader=Continuez et \u00C9ditez Votre Post Qui S'Appelle
+editPostNamePlaceholder=Encore une fois, un nom d\u00E9cent, et entre quatre et vingt-cinq chiffres
+editPostContentPlaceholder=Encore une fois, au moins dix chiffres mais moins de cent cinquante
+submitButtonEditPost=\u00C9ditez-La
+
+
+titleCreateProfile=Le Profil Pour Nouvel Utilisateur
+welcomeCreateProfile=Bienvenue \u00E0 Vernacular Traffic
+messageToFinishCreatingProfile=Il est Maintenant Temps de Remplir Votre Profil
+languageChoiceProfileCreation=Choisissez Une Langue ou Les Deux
+firstNameCreateProfile=Votre Pr\u00E9nom
+lastNameCreateProfile=Votre Nom de Famille
+ageCreateProfile=Votre \u00C0ge
+languagesCreateProfile=S'il vous pla\u00EEt appuyez d'abord sur la touche de contr\u00F4le si vous souhaitez choisir plus d'une langue
+emailAddressCreateProfile=Votre Addresse Email
+submitButtonCreateProfile=en avant
+ENGLISH=Anglais
+FRENCH=Fran\u00E7ais
+
+
+editProfileTitle=\u00C9ditez Votre Profil
+firstNameEditProfile=Pr\u00E9nom
+lastNameEditProfile=Nom de Famille
+ageEditProfile=\u00C0ge
+languageEditProfile=Langue
+languagesEditProfile=Langues
+emailAddressEditProfile=Addresse Email
+saveChangesEditProfile=Sauvegardez Vos Changements
+modalTitleEditProfile=Des Changements du Profil
+modalBodyEditProfile=\u00CAtes-vous s\u00FBr de vouloir apporter ces modifications \u00E0 votre profil?
+closeModalEditProfile=Fermez
+openModalEditProfile=Sauvegardez les Changements
+
+
+editUsernameTitle=\u00C9ditez Votre Nom d'Utilisateur
+editUsernameWelcome=Il est grand temps de changer de nom d'utilisateur
+editUsernameContinue=Faites-le ici
+editUsernameChangeUsername=Changez Votre Nom d'Utilisateur
+usernameChange=Le Changement du Nom d'Utilisateur
+changeUsernameQuestion=\u00CAtes-vous s\u00FBr de vouloir changer votre nom d'utilisateur?
+openModalEditUsername=Changez Mon Nom d'Utilisateur
+
+
+postCommentTitle=Faites un Commentaire de Post
+postCommentIntro=Faites un commentaire pour le post qui s'appelle
+oneCommentPostComment=Le commentaire jusqu'\u00E0 pr\u00E9sent pour
+plusOneCommentPostComment=Les commentaires jusqu'\u00E0 pr\u00E9sent pour
+postCommentPlaceholder=Voici l'endroit pour le commentaire de post
+postCommentButton=Faites un commentaire \u00E0 la mani\u00E8re d'un post
+postCommentMadeBy=le commentaire de post fait par
+
+
+transcriptionCommentTitle=Faites un Commentaire de Transcription
+transcriptionCommentHeader=Faites un Commentaire pour La Transcription qui s'appelle
+oneCommentTranscriptionComment=Le commentaire jusqu'\u00E0 pr\u00E9sent pour
+plusOneCommentTranscriptionComment=Les commentaires jusqu'\u00E0 pr\u00E9sent pour
+transcriptionCommentPage=le commentaire de transcription fait par
+transcriptionCommentTranscriptionPost=le post de la transcription s'appelle
+transcriptionCommentPlaceholder=Voici l'endroit pour le commentaire de transcription
+transcriptionCommentButton=Faites un commentaire \u00E0 la mani\u00E8re d'une transcription
+transcriptionCommentAdditional=et il est par
+
+
+languagePreferenceTitle=Pr\u00E9f\u00E9rence de Langue
+moreThanMonolingual=Bravo \u00EAtre plus que monolingue
+nextHeaderLanguagePreference=Maintenant if faut choisir votre pr\u00E9f\u00E9rence de langue
+langPrefButton=Solidifier votre pr\u00E9f\u00E9rence
+
+
+
+
+
+
+unauthorizedTitle=Non Autoris\u00E9
+unauthorizedMessage=Le code de langue que vous avez choisi n'est pas support\u00E9
+unauthorizedButton=Cliquez ici
+
+
+unavailableTitle=Indisponible
+unavailableMessage=La page que vous avez choisi est indisponible
+
+
+transcriptionTitle=Transcrire un Post
+transcriptionHeader=Transcrire Le Post qui S'appelle
+tablesTranscription=Utilisez les tableaux de boutons ci-dessous
+again=Encore une Fois
+symbolHeader=Les Symboles Suppl\u00E9mentaires
+stress1=Le Stress Primaire
+stress2=Le Stress Secondaire
+aspirated=Aspir\u00E9
+tilde=Tilde
+consonants=Les Consonnes
+bilabial=Bilabiale
+labiodental=Labio-dentale
+dental=Dentale
+alveolar=Alv\u00E9olaire
+postalveolar=Palato-Alv\u00E9olaire
+retroflex=R\u00E9troflexe
+palatal=Palatale
+velar=V\u00E9laire
+uvular=Uvulaire
+pharyngeal=Pharyngale
+glottal=Glottale
+stop=Occlusive
+none=aucun |
+nasal=Nasale
+trill=Roul\u00E9e
+flap=Battue
+fricative=Fricative
+lateralFricative=Fricative Lat\u00E9rale
+approximant=Spirante
+lateralApproximant=Spirante Lat\u00E9rale
+info1=-- Le bouton situ\u00E9 \u00E0 gauche dans une cellule donn\u00E9e d\u00E9signe une consonne sourde,; celui de droite s'aligne pour une consonne vois\u00E9e
+info2=-- Une cellule enti\u00E8rement grise indique qu'il n'y a pas de symbole ni vois\u00E9e ni sourde, pour la mode et point d'articulation; une couleur enti\u00E8rement noire indique que le point et la mode d'articulation en question sont impossibles \u00E0 \u00E9tablir ensemble
+info3=-- "aucun" \u00E9quivaut \u00E0 la couleur gris; "n.p." fait la m\u00EAme chose avec la couleur noire
+vowels=Les Voyelles
+frontFirstHalf=Ant\u00E9
+frontSecondHalf=rieures
+centralFirstHalf=Cent
+centralSecondHalf=rales
+backFirstHalf=Post\u00E9
+backSecondHalf=rieures
+close=Ferm\u00E9e
+nearClose=Pr\u00E9-ferm\u00E9e
+closeMid=Mi-Ferm\u00E9e
+mid=Moyenne
+openMid=Mi-ouverte
+nearOpen=Pr\u00E9-ouverte
+open=Ouverte
+nasalVowels=Les Voyelles Nasales
+lowerCase=en minuscule
+upperCase=en majuscule
+transcriptionButton=Transcrire-Le
+editTranscriptionButton=\u00C9ditez La Transcription
+
+editTranscriptionTitle=\u00C9ditez Votre Transcription
+editTranscriptionHeader=\u00C9ditez Votre Transcription du Post qui S'appelle
