--- a/capstoneProject/src/main/resources/messages.properties
+++ b/capstoneProject/src/main/resources/messages.properties
@@ -106,7 +106,6 @@ postCommentProfileHeader=The Post Comment from
 postCommentsProfileHeader=The Post Comments from
 noPostCommentsProfileOtherUser=hasn't yet commented on any post
 parentofPostComment=comment made on post
-deletePostCommentProfile=DELETE this post comment
 userTranscriptionProfile=Your Transcription
 userTranscriptionsProfile=Your Transcriptions
 noTranscriptionUserProfile=You haven't yet transcribed any post
@@ -122,7 +121,8 @@ transcriptionCommentOtherUserProfile=The Transcription Comment from
 transcriptionCommentsOtherUserProfile=The Transcription Comments from
 noTranscriptionCommentOtherUserProfile=hasn't yet commented on any transcription
 parentOfTranscriptionComment=comment made on transcription
-
+transcriptionForPost=the transcription for this post
+commentOwnPostTimeline=Make a Comment on Your Own Post
 
 postTitle=Make a post
 postFirstHeader=Go On and Make Your Post
