--- a/capstoneProject/src/main/resources/messages_fr.properties
+++ b/capstoneProject/src/main/resources/messages_fr.properties
@@ -60,6 +60,7 @@ transcriptionCommentTime=\u00E0
 transcriptionCommentDate=soumis \u00E0
 deleteTranscriptionComment=SUPPRIMER ce commentaire de transcription
 transcriptionCommentOffer=Faites un commentaire sur cette transcription
+commentOwnPostTimeline=Faites un Commentaire pour Votre Propre Post
 
 
 yourProfile=Votre Profil
@@ -122,6 +123,7 @@ transcriptionCommentOtherUserProfile=Le Commentaire de Transcription de
 transcriptionCommentsOtherUserProfile=Les Commentaires de Transcription de
 noTranscriptionCommentOtherUserProfile=n'a pas encore fait de commentaire de transcription
 parentOfTranscriptionComment=le commentaire de transcription fait sur la transcription qui s'appelle
+transcriptionForPost=la transcription pour ce post
 
 
 postTitle=Faites un post
@@ -131,7 +133,7 @@ postNamePlaceholder=S'il Vous Pla\u00EEt, Donnez \u00E0 le Post un nom d\u00E9ce
 postContent=Le Post Lui-M\u00EAme
 postContentPlaceholder=au moins de dix chiffres mais pas plus d'en cent cinquante
 submitButtonPost=Soumettez-Le
-postLanguage=Cliquez ici pour changer votre langue de publication \u00E0 fran\u00E7ais
+postLanguage=Cliquez ici pour changer votre langue de publication \u00E0 anglais
 toTimelineFromPost=Ou Retournez \u00E0 La Chronologie
 
 
