commit 22 OCT again

--- a/capstoneProject/src/main/resources/messages.properties
+++ b/capstoneProject/src/main/resources/messages.properties
@@ -197,6 +197,7 @@ transcriptionCommentTranscriptionPost=the transcription's post, as you see above
 transcriptionCommentPlaceholder=Here is where the transcription comment goes
 transcriptionCommentButton=Comment in the transcription-like way
 transcriptionCommentAdditional=and it's by
+palatalized=Palatalized
 
 
 languagePreferenceTitle=Language Preference
