--- a/capstoneProject/src/main/resources/messages_fr.properties
+++ b/capstoneProject/src/main/resources/messages_fr.properties
@@ -199,6 +199,7 @@ transcriptionCommentTranscriptionPost=le post de la transcription s'appelle
 transcriptionCommentPlaceholder=Voici l'endroit pour le commentaire de transcription
 transcriptionCommentButton=Faites un commentaire \u00E0 la mani\u00E8re d'une transcription
 transcriptionCommentAdditional=et il est par
+palatalized=Palatalis\u00E9
 
 
 languagePreferenceTitle=Pr\u00E9f\u00E9rence de Langue
