seeming final version

--- a/capstoneProject/src/main/resources/messages_fr.properties
+++ b/capstoneProject/src/main/resources/messages_fr.properties
@@ -209,7 +209,7 @@ langPrefButton=Solidifier votre pr\u00E9f\u00E9rence
 
 
 
-
+deletePostCommentProfile=Supprimer ce commentaire de post
 
 
 unauthorizedTitle=Non Autoris\u00E9
